新增对于浏览器不支持JavaScript的提醒

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <!-- 正式部署  //-->
     <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/jquery.min.js?v=1.7.2"></script>
     <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/plugins/jquery.ua.min.js?v=1.2"></script>
+    <style type="text/css">
+        .noscript{ border:solid #aacbee 1px;background-color:#f9fcff;font-size:24px;line-heihht: 36px;margin:64px 4px;width:100%;}
+    </style>
 </head>
     <body>
+        <noscript>
+            <div class="noscript">您的浏览器不支持 JavaScript脚本 无法进行检测。
+            </div>
+        </noscript>
         此页面用于实现将 360浏览器 的内核切换为IE
     </body>
 </html>
