--- a/BrowserCheck.html
+++ b/BrowserCheck.html
@@ -211,7 +211,7 @@
             return allowFull;
         }
 
-        //由Internet Exporer决定如何开打弹出窗口
+        //由Internet Exporer决定如何打开弹出窗口
         function DecidePopupByIECheck(browser, index) {
             var popup = false;
             if (getDecidePopupByIEStatus() == 2) {
@@ -382,7 +382,7 @@
 //            TrustWebSiteCheck("ie", "3");
 //            //允许由脚本初始化的窗口，没有大小和位置限制
 //            AllowFullSizeWindowCheck("ie", "4");
-//            //由Internet Exporer决定如何开打弹出窗口
+//            //由Internet Exporer决定如何打开弹出窗口
 //            DecidePopupByIECheck("ie", "5");
 //            //Cookies检测
 //            CookieCheck("ie", "6");
@@ -402,7 +402,7 @@
             showIeTool += TrustWebSiteCheck("ie", "3") ? 0 : 1;
             //允许由脚本初始化的窗口，没有大小和位置限制
             showIeTool += AllowFullSizeWindowCheck("ie", "4") ? 0 : 1;
-            //由Internet Exporer决定如何开打弹出窗口
+            //由Internet Exporer决定如何打开弹出窗口
             showIeTool += DecidePopupByIECheck("ie", "5") ? 0 : 1;
             //弹框检测
             //弹出窗口的问题需要特殊处理，暂时排除
@@ -596,7 +596,7 @@
                         <a href="http://mis.msdi.cn/portal/install/ie/IE8-WindowsXP-x86-CHS.exe" target="_blank">本地下载(适用于XP 32位)</a></li>
                     
                     <li>3、如果使用IE浏览器，请将“<b>mis.msdi.cn</b> / <b>zny.msdi.cn</b> / <b>pmis.msdi.cn</b>”加入可信任站点，同时启用选项 "允许由脚本初始化的窗口，没有大小和位置限制"</li>
-                    <li>4、IE7及以上版本把弹出窗口选项设置为"由Internet Exporer决定如何开打弹出窗口"</li>
+                    <li>4、IE7及以上版本把弹出窗口选项设置为"由Internet Exporer决定如何打开弹出窗口"</li>
                     
                     <li>5、允许Javascript、允许 Cookies </li>
                     <li>7、IE7及以上版本、或其他浏览器 请设置 允许弹出窗口</li>
@@ -630,7 +630,7 @@
                                                                                                class="browserRet"></span><a id="ieBrowserSuggest3" class="browserSuggest"></a></li>
                         <li>4、允许由脚本初始化的窗口，没有大小和位置限制：<span id="ieBrowserInfo4" class="browserInfo"></span><span
                                                                                                              id="ieBrowserRet4" class="browserRet"></span><a id="ieBrowserSuggest4" class="browserSuggest"></a></li>
-                        <li>5、由Internet Exporer决定如何开打弹出窗口：<span id="ieBrowserInfo5" class="browserInfo"></span><span
+                        <li>5、由Internet Exporer决定如何打开弹出窗口：<span id="ieBrowserInfo5" class="browserInfo"></span><span
                                                                                                                    id="ieBrowserRet5" class="browserRet"></span><a id="ieBrowserSuggest5" class="browserSuggest"></a></li>
                         <li>6、Cookies：<span id="ieBrowserInfo6" class="browserInfo"></span><span id="ieBrowserRet6"
                                                                                                  class="browserRet"></span><a id="ieBrowserSuggest6" class="browserSuggest"></a></li>
